Migrate to Java 11.