@@ -2,4 +2,4 @@ SET "PATH=.\gdal;%PATH%"
 SET "GDAL_DRIVER_PATH=.\gdal\gdalplugins"
 SET "GDAL_DATA=.\gdal\gdal-data"
 SET "PROJ_LIB=.\gdal\projlib"
-"..\jre\bin\java.exe" -Djava.library.path=".;.\gdal" -cp ..\lib\time-shifter.jar;..\lib\* shifter.ShifterWizard
+"..\jre\bin\java.exe" --module-path "..\jmods" --add-modules javafx.controls,javafx.fxml -Djava.library.path=".;.\gdal" -cp ..\lib\time-shifter.jar;..\lib\* shifter.ShifterWizard
